--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3254b79
-	trimbase = 
+	trim = test_osrf_testing_tools_cpp
+	base = 52df934
+	trimbase = 3254b79
 	parent = upstream
 	previous = d2b72af
