--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 45bfc8e
-	trimbase = 
+	trim = osrf_testing_tools_cpp
+	base = 1d90df3
+	trimbase = 45bfc8e
 	parent = upstream
 	previous = d2b72af
