--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1d90df3
+	base = 516e0ba
 	trimbase = 
 	parent = release/bouncy/osrf_testing_tools_cpp
-	previous = 
+	previous = 1d90df3
