--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bddd8c2
+	base = d626f6c
 	trimbase = 
 	parent = debian/bouncy/osrf_testing_tools_cpp
-	previous = 
+	previous = bddd8c2
