--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 52df934
+	base = 574d714
 	trimbase = 
 	parent = release/bouncy/test_osrf_testing_tools_cpp
-	previous = 
+	previous = 52df934
