--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e072b8e
+	base = 4260789
 	trimbase = 
 	parent = debian/bouncy/test_osrf_testing_tools_cpp
-	previous = 
+	previous = e072b8e
