--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cd6315d
-	trimbase = 
+	trim = test_osrf_testing_tools_cpp
+	base = 3143fd8
+	trimbase = cd6315d
 	parent = upstream
 	previous = d292b44
