--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e914337
-	trimbase = 
+	trim = osrf_testing_tools_cpp
+	base = cea4bfb
+	trimbase = e914337
 	parent = upstream
 	previous = d292b44
