--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3143fd8
+	base = 6c99635
 	trimbase = 
 	parent = release/crystal/test_osrf_testing_tools_cpp
-	previous = 
+	previous = 3143fd8
