--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6341d35
+	base = c79d9e8
 	trimbase = 
 	parent = debian/crystal/test_osrf_testing_tools_cpp
-	previous = 
+	previous = 6341d35
