--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cea4bfb
+	base = 520bdf4
 	trimbase = 
 	parent = release/crystal/osrf_testing_tools_cpp
-	previous = 
+	previous = cea4bfb
