--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 624b5e6
+	base = ff99b7c
 	trimbase = 
 	parent = debian/crystal/osrf_testing_tools_cpp
-	previous = 
+	previous = 624b5e6
