--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = 0d8ad6f
 	parent = upstream
-	trimbase = 
-	base = dddda84
-	trim = 
+	trimbase = dddda84
+	base = dd22388
+	trim = test_osrf_testing_tools_cpp
