--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = 0d8ad6f
 	parent = upstream
-	trimbase = 
-	base = 4e3292d
-	trim = 
+	trimbase = 4e3292d
+	base = 0453df5
+	trim = osrf_testing_tools_cpp
