--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	base = dd22388
+	base = 80622cc
 	parent = release/dashing/test_osrf_testing_tools_cpp
 	trimbase = 
-	previous = 
+	previous = dd22388
 	trim = 
