--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	base = 72ab0d0
+	base = 92b1256
 	parent = debian/dashing/test_osrf_testing_tools_cpp
 	trimbase = 
-	previous = 
+	previous = 72ab0d0
 	trim = 
