--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	base = 0453df5
+	base = 79ae71c
 	parent = release/dashing/osrf_testing_tools_cpp
 	trimbase = 
-	previous = 
+	previous = 0453df5
 	trim = 
