--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	base = 17e155c
+	base = 85dba68
 	parent = debian/dashing/osrf_testing_tools_cpp
 	trimbase = 
-	previous = 
+	previous = 17e155c
 	trim = 
