--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = 84fe49b
 	parent = upstream
-	trimbase = 
-	base = 375a245
+	trimbase = 375a245
+	base = f5be626
 	trim = test_osrf_testing_tools_cpp
