--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84fe49b
-	base = 4da90f7
-	trim = 
-	trimbase = 
+	base = 2eb85ef
+	trim = test_osrf_testing_tools_cpp
+	trimbase = 4da90f7
