--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84fe49b
-	base = ff26247
-	trim = 
-	trimbase = 
+	base = 7e3567b
+	trim = osrf_testing_tools_cpp
+	trimbase = ff26247
