--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/test_osrf_testing_tools_cpp
-	previous = 
-	base = 2eb85ef
+	previous = 2eb85ef
+	base = 9ff0550
 	trim = 
 	trimbase = 
