--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/test_osrf_testing_tools_cpp
-	previous = 
-	base = 380dfd3
+	previous = 380dfd3
+	base = 55c308a
 	trim = 
 	trimbase = 
