--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/osrf_testing_tools_cpp
-	previous = 
-	base = 7e3567b
+	previous = 7e3567b
+	base = 14be6c4
 	trim = 
 	trimbase = 
