--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/osrf_testing_tools_cpp
-	previous = 
-	base = 22c70c7
+	previous = 22c70c7
+	base = a80e739
 	trim = 
 	trimbase = 
