--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = 84fe49b
 	parent = upstream
-	trimbase = 
-	base = ad1d7fc
+	trimbase = ad1d7fc
+	base = a6e0bee
 	trim = test_osrf_testing_tools_cpp
