--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = 84fe49b
 	parent = upstream
-	trimbase = 68b6322
+	trimbase = 
 	base = a8d91f4
 	trim = osrf_testing_tools_cpp
