--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = e2caa74
 	parent = upstream
-	trimbase = 
-	base = b33eebb
+	trimbase = b33eebb
+	base = 174a808
 	trim = test_osrf_testing_tools_cpp
