--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = 84fe49b
 	parent = upstream
-	trimbase = 06bf98e
+	trimbase = 
 	base = 6e12dee
 	trim = osrf_testing_tools_cpp
