--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	previous = e2caa74
 	parent = upstream
-	trimbase = 
-	base = b2b2516
+	trimbase = b2b2516
+	base = c255f1f
 	trim = osrf_testing_tools_cpp
