--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2caa74
-	base = bbae750
+	base = afd5c58
 	trim = test_osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = bbae750
