--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2caa74
-	base = 8bebbe9
+	base = b2cdcb1
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 8bebbe9
