--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ca38f1f
-	trimbase = 
+	trim = test_osrf_testing_tools_cpp
+	base = b831cca
+	trimbase = ca38f1f
 	parent = upstream
 	previous = 81c95eb
