--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a5053d7
+	base = eaba5b2
 	trimbase = 
 	parent = release/foxy/osrf_testing_tools_cpp
-	previous = 
+	previous = a5053d7
