--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b36f967
+	base = 48ed231
 	trimbase = 
 	parent = debian/foxy/osrf_testing_tools_cpp
-	previous = 
+	previous = b36f967
