--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b831cca
+	base = 9448c93
 	trimbase = 
 	parent = release/foxy/test_osrf_testing_tools_cpp
-	previous = 
+	previous = b831cca
