--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4f467ad
+	base = b35f7a1
 	trimbase = 
 	parent = debian/foxy/test_osrf_testing_tools_cpp
-	previous = 
+	previous = 4f467ad
