--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_osrf_testing_tools_cpp
 	base = b831cca
-	trimbase = ca38f1f
+	trimbase = 
 	parent = upstream
 	previous = 81c95eb
