--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_osrf_testing_tools_cpp
-	base = 9cf685d
-	trimbase = 
+	base = 4cc9d8d
+	trimbase = 9cf685d
 	parent = upstream
 	previous = a0d61c9
