--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = osrf_testing_tools_cpp
-	base = 65efe20
-	trimbase = 
+	base = 4f73509
+	trimbase = 65efe20
 	parent = upstream
 	previous = a0d61c9
