--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = osrf_testing_tools_cpp
 	base = a5053d7
-	trimbase = e3608ae
+	trimbase = 
 	parent = upstream
 	previous = 81c95eb
