--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = osrf_testing_tools_cpp
-	base = 4c664c0
-	trimbase = 
+	base = 343ee16
+	trimbase = 4c664c0
 	parent = upstream
 	previous = 2b12738
