--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_osrf_testing_tools_cpp
-	base = 5e21b2f
-	trimbase = 
+	base = 7d27ff8
+	trimbase = 5e21b2f
 	parent = upstream
 	previous = 2b12738
