--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 70a79f0
-	base = cd00c01
-	trim = 
-	trimbase = 
+	base = 0fa823b
+	trim = test_osrf_testing_tools_cpp
+	trimbase = cd00c01
