--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 70a79f0
-	base = 17643b5
-	trim = 
-	trimbase = 
+	base = 11ea3d2
+	trim = osrf_testing_tools_cpp
+	trimbase = 17643b5
