--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/test_osrf_testing_tools_cpp
-	previous = 
-	base = cebe021
+	previous = cebe021
+	base = 0a418d6
 	trim = 
 	trimbase = 
