--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = 5b12f58
+	previous = 5b12f58
+	base = 8b08a89
 	trim = 
 	trimbase = 
