--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = 11ea3d2
+	previous = 11ea3d2
+	base = 299653d
 	trim = 
 	trimbase = 
