--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = 9956cb6
+	previous = 9956cb6
+	base = 0d2a694
 	trim = 
 	trimbase = 
