--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/test_osrf_testing_tools_cpp
-	previous = 
-	base = 0fa823b
+	previous = 0fa823b
+	base = ec28105
 	trim = 
 	trimbase = 
