--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/test_osrf_testing_tools_cpp
-	previous = 
-	base = f841182
+	previous = f841182
+	base = 3c115d1
 	trim = 
 	trimbase = 
