--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = 9f42c6b
+	previous = 9f42c6b
+	base = 67f9935
 	trim = 
 	trimbase = 
