--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d73b398
-	base = d9b64c0
+	base = 61f12a4
 	trim = test_osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = d9b64c0
