--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d73b398
-	base = 550af9a
+	base = eaf8405
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 550af9a
