--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b5a215c
-	base = 0383b6e
+	base = 0542567
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 0383b6e
