--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b5a215c
-	base = 9c113d8
+	base = 9b6c86d
 	trim = test_osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 9c113d8
