--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.2-3": ["Tue Apr 20 2021", "William Woodall", "william@osrfoundation.org"], "1.3.2-2": ["Mon Mar 08 2021", "William Woodall", "william@osrfoundation.org"]}
+{"1.4.0-1": ["Tue May 25 2021", "William Woodall", "william@osrfoundation.org"], "1.3.2-3": ["Tue Apr 20 2021", "William Woodall", "william@osrfoundation.org"], "1.3.2-2": ["Mon Mar 08 2021", "William Woodall", "william@osrfoundation.org"]}
