--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b5a215c
-	base = 65ca5d3
+	base = 4382672
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 65ca5d3
