--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = osrf_testing_tools_cpp
-	base = 6595faa
-	trimbase = 
+	base = db0390e
+	trimbase = 6595faa
 	parent = upstream
 	previous = f202115
