--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.2": ["William Woodall", "william@osrfoundation.org"]}
+{"1.3.4": ["William Woodall", "william@osrfoundation.org"], "1.3.3": ["William Woodall", "william@osrfoundation.org"], "1.3.2": ["William Woodall", "william@osrfoundation.org"]}
