--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0d193b1
-	base = dde56b7
-	trim = 
-	trimbase = 
+	base = f775374
+	trim = osrf_testing_tools_cpp
+	trimbase = dde56b7
