--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = f775374
+	previous = f775374
+	base = 2d661d5
 	trim = 
 	trimbase = 
