--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = 8a7b60f
+	previous = 8a7b60f
+	base = 5013f2a
 	trim = 
 	trimbase = 
