--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = 470b34b
+	previous = 470b34b
+	base = 497f30d
 	trim = 
 	trimbase = 
