--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = b29489d
+	previous = b29489d
+	base = 3a63de3
 	trim = 
 	trimbase = 
