--- a/tracks.yaml
+++ b/tracks.yaml
@@ -175,5 +175,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/osrf/osrf_testing_tools_cpp.git
-    version: 1.5.0
-    version_saved: :{auto}
+    version: :{auto}
