--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bc4ee6
-	base = a9315c4
+	base = b8a6321
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = a9315c4
