Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.5.0": ["William Woodall", "william@osrfoundation.org"], "1.4.0": ["William Woodall", "william@osrfoundation.org"], "1.3.2": ["William Woodall", "william@osrfoundation.org"]}
+{"1.5.1": ["William Woodall", "william@osrfoundation.org"], "1.5.0": ["William Woodall", "william@osrfoundation.org"], "1.4.0": ["William Woodall", "william@osrfoundation.org"], "1.3.2": ["William Woodall", "william@osrfoundation.org"]}
