--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 70aeae4
-	base = 4cbe6b5
+	base = 7ff4076
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 4cbe6b5
