--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 91b81ac
-	base = e8f5ca7
+	base = 9ed6c19
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = e8f5ca7
