--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/test_osrf_testing_tools_cpp
-	previous = 
-	base = 1f85fe3
+	previous = 1f85fe3
+	base = 49ba048
 	trim = 
 	trimbase = 
