--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0a935b1
-	base = b37b750
-	trim = 
-	trimbase = 
+	base = f2517d1
+	trim = osrf_testing_tools_cpp
+	trimbase = b37b750
