--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = f2517d1
+	previous = f2517d1
+	base = c8c38d6
 	trim = 
 	trimbase = 
