--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = 6cb62fb
+	previous = 6cb62fb
+	base = 49ca168
 	trim = 
 	trimbase = 
