--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/osrf_testing_tools_cpp
-	previous = 
-	base = eda96cb
+	previous = eda96cb
+	base = e5fc93c
 	trim = 
 	trimbase = 
