--- a/tracks.yaml
+++ b/tracks.yaml
@@ -201,5 +201,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/osrf/osrf_testing_tools_cpp.git
-    version: 1.5.1
-    version_saved: :{auto}
+    version: :{auto}
