--- a/test_osrf_testing_tools_cpp/package.xml
+++ b/test_osrf_testing_tools_cpp/package.xml
@@ -4,10 +4,14 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>test_osrf_testing_tools_cpp</name>
-  <version>1.5.1</version>
+  <version>1.5.3</version>
   <description>Test package, which uses things exported by osrf_testing_tools_cpp.</description>
-  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
+
+  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
+
   <license>Apache License 2.0</license>
+
+  <author email="william@osrfoundation.org">William Woodall</author>
 
   <buildtool_depend>cmake</buildtool_depend>
 
