--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26cabb1
-	base = 4543ebf
+	base = 5f89f49
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 4543ebf
