--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5214586
-	base = 7f4ae29
+	base = 9966cae
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = 7f4ae29
