--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.5.3-1": ["Tue Apr 11 2023", "Geoffrey Biggs", "geoff@openrobotics.org"], "1.5.1-2": ["Tue Mar 21 2023", "William Woodall", "william@osrfoundation.org"]}
+{"1.5.3-2": ["Thu Apr 20 2023", "Geoffrey Biggs", "geoff@openrobotics.org"], "1.5.3-1": ["Tue Apr 11 2023", "Geoffrey Biggs", "geoff@openrobotics.org"], "1.5.1-2": ["Tue Mar 21 2023", "William Woodall", "william@osrfoundation.org"]}
