--- a/tracks.yaml
+++ b/tracks.yaml
@@ -201,8 +201,7 @@ tracks:
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/osrf/osrf_testing_tools_cpp.git
-    version: 1.5.3
-    version_saved: :{auto}
+    version: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
