--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5214586
-	base = ea129f8
+	base = b6f8226
 	trim = osrf_testing_tools_cpp
-	trimbase = 
+	trimbase = ea129f8
